--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -53,6 +53,7 @@ pipeline {
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
+                    git config --global --unset credential.helper
                     git config user.email "vinoddevopscloud99@gmail.com"
                     git config user.name "vinod v"
                     BUILD_NUMBER=${BUILD_NUMBER}
