--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -10,6 +10,7 @@ pipeline {
       steps {
         sh 'echo passed'
         git branch: 'main', url: 'https://github.com/VinodVulavakayala/Jenkins-Zero-To-Hero.git'
+        sh 'sudo chmod -R 775 Jenkins-Zero-To-Hero'
       }
     }
     stage('Build and Test') {
